syntax = "proto3";

option csharp_namespace = "GrpcClient";

package tarot.v1;

message Pagination {
  int32 page = 1;
  int32 page_size = 2;
}

message BoolResponse {
  bool result = 1;
}

message IdRequest {
  uint64 id = 1;
}